# HW_7

./: pyproject.toml
alembic/: env.py
alembic/versions/: 068f3979a55f_init.py  a1538ef61056_init.py
hw_7/: db_connection.py  db_fake_entity_filler.py  db_tables_creation.py  main.py
